; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/uxtheme/extr_uxini.c_UXINI_FindSection.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/uxtheme/extr_uxini.c_UXINI_FindSection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOCALE_SYSTEM_DEFAULT = common dso_local global i32 0, align 4
@NORM_IGNORECASE = common dso_local global i32 0, align 4
@CSTR_EQUAL = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UXINI_FindSection(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  br label %8

8:                                                ; preds = %23, %2
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @UXINI_GetNextSection(i32 %9, i32* %7)
  store i32 %10, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %24

12:                                               ; preds = %8
  %13 = load i32, i32* @LOCALE_SYSTEM_DEFAULT, align 4
  %14 = load i32, i32* @NORM_IGNORECASE, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %5, align 4
  %18 = call i64 @CompareStringW(i32 %13, i32 %14, i32 %15, i32 %16, i32 %17, i32 -1)
  %19 = load i64, i64* @CSTR_EQUAL, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %12
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* %3, align 4
  br label %26

23:                                               ; preds = %12
  br label %8

24:                                               ; preds = %8
  %25 = load i32, i32* @FALSE, align 4
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %24, %21
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @UXINI_GetNextSection(i32, i32*) #1

declare dso_local i64 @CompareStringW(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
